--- a/Página Principal/index.html
+++ b/Página Principal/index.html
@@ -41,12 +41,15 @@
             </label>
         </div>
     </div>
-    <div id="menuSecundario">
-
-    </div>
-    <div id="divText1">
-        <h3>Objetivo</h3>
-        <p1>Temos como objetivo usar essa página para apresentar a franquia Pokemon e ensinar a jogar os seus jogos</p1>
+    <!-- <div id="menuSecundario">
+    </div> -->
+    <div id="objetivo">
+        <img id="fotoObjetivo"
+            src="https://s2.glbimg.com/Cahe823phGwauTTB0j-BLcJ0TNc=/0x0:1920x1200/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2021/s/h/JAPmCFRRKtz6Oud2T6Og/pokemon-omega-ruby-alpha-sapphire.jpg">
+        <h2 class="textDoObjetivo" id="tituloObjetivo">Objetivo da página</h2>
+        <p class="textDoObjetivo" id="textObjetivo">Essa página tem como objetivo informar<br> e ensinar sobre a
+            franquia
+            Pokémon,<br> desde os seus jogo até como jogá-los</p>
     </div>
     <footer>
         <p id="autores">&copy; João Darwin, Marcos Paulo, Tobias, Gabriel</p>
