--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -39,7 +39,28 @@
         </div>
     </div>
 
+    <main>
 
+        <img src="#" alt="pokemon" class="pokemon__image">
+
+        <h1 class="pokemon__data">
+            <span class="pokemon__number"></span> -
+            <span class="pokemon__name"></span>
+        </h1>
+
+        <form class="form">
+            <input type="search" class="input__search" placeholder="Name or Number" required>
+        </form>
+
+        <div class="buttons">
+            <button class="button btn-prev">Prev &lt; </button>
+            <button class="button btn-next">Next &gt; </button>
+        </div>
+
+        <img src="https://github.com/manualdodev/pokedex/blob/main/images/pokedex.png?raw=true" alt="Imagem Pokedex"
+            class="pokedex">
+
+    </main>
 
     <script src="script.js"></script>
 </body>
