Responsição da página principal

--- a/Página Principal/index.html
+++ b/Página Principal/index.html
@@ -44,10 +44,9 @@
     </div>
     <div id="divSobrePokemon">
         <h1 class="tituloPokemon">Pokémon</h1>
-        <p class="textoPokemon">Pokémon é uma série de jogos eletrônicos desenvolvidos pela Game
-            Freak e publicados pela Nintendo como parte da franquia de mídia Pokémon. Lançado pela primeira vez em 1996
-            no Japão para o console Game Boy, a principal série de jogos de RPGs, que continuou em cada geração em
-            portáteis da Nintendo.
+        <p class="textoPokemon">Pokémon é uma série de jogos eletrônicos desenvolvidos pela Game Freak e publicados pela
+            Nintendo como parte da franquia de mídia Pokémon. Lançado pela primeira vez em 1996 no Japão para o console
+            Game Boy, a principal série de jogos de RPGs, que continuou em cada geração em portáteis da Nintendo.
             <br><br>
             Os jogos são geralmente lançados em pares, sendo que cada um contém pequenas variações em relação ao outro.
             Enquanto a série principal consiste em RPGs, os spin-off abrangem outros gêneros, como RPG de ação,
@@ -328,9 +327,6 @@
             src="https://sm.ign.com/t/ign_br/screenshot/default/pokemon-scarlet-violet-thumb-1_6n3r.h720.jpg"
             alt="Pokemon nona geração">
     </div>
-    <footer>
-        <p id="autores">&copy; João Darwin, Marcos Paulo, Tobias, Gabriel</p>
-    </footer>
     <script src="script.js"></script>
 </body>
 
