--- a/Página Principal/index.html
+++ b/Página Principal/index.html
@@ -332,14 +332,14 @@
             src="https://sm.ign.com/t/ign_br/screenshot/default/pokemon-scarlet-violet-thumb-1_6n3r.h720.jpg"
             alt="Pokemon nona geração">
     </div>
-    <footer class="rodape">
+    <div class="rodape">
         <hr size="10" width="50%" align="center" noshade>
-        <h3 class="tituloRodape">ADS - DÉX</h3>
-        <p class="textoRodape">Contato</p>
-        <p class="textoRodape">Novidades no sistema</p>
-        <p class="textoRodape">Políticas de privacidade</p>
+        <h3 class="tituloRodape">ADS - DÉX</h3><br>
+        <p class="textoRodape">Contato</p><br>
+        <p class="textoRodape">Novidades no sistema</p><br>
+        <p class="textoRodape">Políticas de privacidade</p><br>
         <p></p>
-    </footer>
+    </div>
     <script src="script.js"></script>
 </body>
 
