Finalização da página de cadastro

--- a/Página Login/Telefone/index.html
+++ b/Página Login/Telefone/index.html
@@ -27,13 +27,13 @@
                     </label>
                     <a href="" class="link">Esqueci minha senha</a><br><br>
                     <button type="submit" class="button">Enter</button><br><br>
-                    <p1>Não possui uma conta? <a href="../../Página de Cadastro/PC e Tablet/index.html" class="link">Cadastre-se</a></p1>
+                    <p1>Não possui uma conta? <a href="../../Página de Cadastro/Telefone/index.html" class="link">Cadastre-se</a></p1>
                 </form>
             </div>
         </div>
-        <!-- <div class="divImagemLogin">
+        <div class="divImagemLogin">
             <img class="imagemLogin" src="https://sm.ign.com/ign_pt/news/t/the-pokemo/the-pokemon-company-pledges-25-million-to-improving-the-live_2epk.jpg" alt="">
-        </div> -->
+        </div>
     </div>
 
     <!-- <div>
