--- a/Página de Cadastro/PC e Tablet/index.html
+++ b/Página de Cadastro/PC e Tablet/index.html
@@ -7,27 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://raw.githubusercontent.com/manualdodev/pokedex/main/favicons/favicon-16x16.png">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>ADS Déx - Login</title>
+    <title>ADS Déx - Cadastro</title>
 </head>
 
 <body>
     <div class="divLogin">
         <div class="container1">
             <h2 class="subTituloLogin">Junte-se ao clube de treinadores Pokémon!</h2><br>
-            <h3 class="subTituloLogin">Entrar</h3>
+            <h3 class="subTituloLogin">Cadastre-se</h3>
             <div class="loginMenu">
                 <form>
                     <label>
                         <p class="textoInput">Nome usuário: </p>
                         <input type="text" class="inputTexto" placeholder="Usuário">
-                    </label><a href="" class="link">Esqueci meu usuário</a><br><br>
+                    </label><br><br>
+                    <label>
+                        <p class="textoInput">E-mail: </p>
+                        <input type="email" class="inputTexto" placeholder="E-mail">
+                    </label><br><br>
                     <label>
                         <p class="textoInput">Senha: </p>
                         <input type="password" class="inputTexto" placeholder="Senha">
-                    </label>
-                    <a href="" class="link">Esqueci minha senha</a><br><br>
-                    <button type="submit" class="button">Enter</button><br><br>
-                    <p1>Não possui uma conta? <a href="../../Página de Cadastro/PC e Tablet/index.html" class="link">Cadastre-se</a></p1>
+                    </label><br><br>
+                    <label>
+                        <p class="textoInput">Repetir senha: </p>
+                        <input type="password" class="inputTexto" placeholder="Senha">
+                    </label><br><br>    
+                    <button type="submit" class="button">Feito</button><br><br>
+                    <p1>voltar para o <a href="../../Página Login/PC e Tablet/index.html" class="link">login</a></p1>
                 </form>
             </div>
         </div>
