Finalização do projeto

--- a/Página Login/PC e Tablet/index.html
+++ b/Página Login/PC e Tablet/index.html
@@ -27,7 +27,7 @@
                     </label>
                     <a href="" class="link">Esqueci minha senha</a><br><br>
                     <button type="submit" class="button">Enter</button><br><br>
-                    <p1>Não possui uma conta? <a href="../../Página de Cadastro/PC e Tablet/index.html" class="link">Cadastre-se</a></p1>
+                    <p1>Não possui uma conta? <a href="../../Página de Cadastro/PC e Tablet/index.html" class="link textoInput1">Cadastre-se</a></p1>
                 </form>
             </div>
         </div>
